--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -80,9 +80,11 @@
     <ClInclude Include="..\include\ElapsedTimer.h" />
     <ClInclude Include="..\include\Object.h" />
     <ClInclude Include="..\include\Ref.h" />
+    <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\include\Ref.inl" />
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\ElapsedTimer.cpp" />
