--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -27,11 +27,15 @@
     <ClInclude Include="..\include\Ref.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Window.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="..\include\Ref.inl">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\ElapsedTimer.cpp">
