--- a/engine/engine.vcxproj.filters
+++ b/engine/engine.vcxproj.filters
@@ -44,6 +44,7 @@
     <None Include="..\include\Ref.inl">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\source\ElapsedTimer.cpp">
