--- a/TestDemo/TestDemo.vcxproj.filters
+++ b/TestDemo/TestDemo.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="targetver.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\include\esUtil.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
