--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -83,6 +83,7 @@
     <ClInclude Include="..\include\Object.h" />
     <ClInclude Include="..\include\OpenGLES2GraphicsSystem.h" />
     <ClInclude Include="..\include\Ref.h" />
+    <ClInclude Include="..\include\Shader.h" />
     <ClInclude Include="..\include\Win32Window.h" />
     <ClInclude Include="..\include\Window.h" />
   </ItemGroup>
@@ -95,6 +96,7 @@
     <ClCompile Include="..\source\GraphicsSystem.cpp" />
     <ClCompile Include="..\source\Object.cpp" />
     <ClCompile Include="..\source\OpenGLES2GraphicsSystem.cpp" />
+    <ClCompile Include="..\source\Shader.cpp" />
     <ClCompile Include="..\source\Win32Window.cpp" />
     <ClCompile Include="..\source\Window.cpp" />
   </ItemGroup>
