--- a/engine/engine.vcxproj
+++ b/engine/engine.vcxproj
@@ -84,6 +84,7 @@
     <ClInclude Include="..\include\OpenGLES2GraphicsSystem.h" />
     <ClInclude Include="..\include\Ref.h" />
     <ClInclude Include="..\include\Shader.h" />
+    <ClInclude Include="..\include\Texture.h" />
     <ClInclude Include="..\include\Win32Window.h" />
     <ClInclude Include="..\include\Window.h" />
   </ItemGroup>
@@ -97,6 +98,7 @@
     <ClCompile Include="..\source\Object.cpp" />
     <ClCompile Include="..\source\OpenGLES2GraphicsSystem.cpp" />
     <ClCompile Include="..\source\Shader.cpp" />
+    <ClCompile Include="..\source\Texture.cpp" />
     <ClCompile Include="..\source\Win32Window.cpp" />
     <ClCompile Include="..\source\Window.cpp" />
   </ItemGroup>
